[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/sounds/player-bullet-sfx.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/models/player_v2.gltf" type="PackedScene" id=3]
[ext_resource path="res://Assets/models/Player1.glb" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.76546, 0.345218, 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "SlideAway"
length = 3.0
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:translation:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 3 )
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.725696, 0.345, 1 )

[node name="Player" type="Area" groups=["Player"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0294337, 0, 0.00298166 )
collision_layer = 3
script = ExtResource( 1 )

[node name="Mesh" type="Spatial" parent="."]
transform = Transform( 0.096547, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="PlayerMeshV2" parent="Mesh" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.761583, -4.93235, 0.427539 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.201024, 0 )
shape = SubResource( 1 )

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="SecondShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="InvulnerabiltyTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="FlashTimer" type="Timer" parent="InvulnerabiltyTimer"]
wait_time = 0.1

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="SlideAwayAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/SlideAway = SubResource( 3 )

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="RescuedShip" type="Area" parent="." groups=["RescuedShip"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.548, 0, 0 )

[node name="Mesh_OLD" parent="RescuedShip" instance=ExtResource( 4 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0 )
visible = false

[node name="Mesh" type="Spatial" parent="RescuedShip"]
transform = Transform( 0.096547, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )

[node name="PlayerMeshV2" parent="RescuedShip/Mesh" instance=ExtResource( 3 )]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0.465242, -4.93235, 0.427539 )

[node name="CollisionShape" type="CollisionShape" parent="RescuedShip"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.201, 0 )
shape = SubResource( 4 )

[node name="MoveTween" type="Tween" parent="RescuedShip"]

[node name="RotateTween" type="Tween" parent="RescuedShip"]

[connection signal="timeout" from="InvulnerabiltyTimer" to="." method="_on_InvulnerabiltyTimer_timeout"]
[connection signal="timeout" from="InvulnerabiltyTimer/FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="tween_all_completed" from="RescuedShip/RotateTween" to="." method="_on_RotateTween_tween_all_completed"]
